[Framework] Added progress bar to console output